[package]
name = "global-error"
version = "0.1.5"
authors = ["Rivet Gaming, LLC <developer@rivet.gg>"]
edition = "2018"
license = "Apache-2.0"

[dependencies]
formatted-error = { path = "../formatted-error" }
types = { path = "../types/core" }
http = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"

# [dependencies.redis]
# version = "0.21"
# default-features = false
