[package]
name = "global-error"
version = "0.1.5"
authors = ["Rivet Gaming, LLC <developer@rivet.gg>"]
edition = "2018"
license = "Apache-2.0"

[features]
protobuf-src = ["types/protobuf-src"]
chirp = ["types"]

[dependencies]
formatted-error = { path = "../formatted-error" }
types = { path = "../types/core", optional = true }
http = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
