[package]
name = "rivet-health-checks"
version = "0.1.0"
authors = ["Rivet Gaming, LLC <developer@rivet.gg>"]
edition = "2021"
license = "Apache-2.0"

[dependencies]
chirp-client = { path = "../chirp/client" }
hyper = { version = "0.14", features = ["server", "http1", "tcp"] }
rivet-pools = { path = "../pools" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tokio = { version = "1.29", features = ["tracing"] }
tracing = "0.1"
uuid = { version = "1", features = ["v4"] }
