[package]
name = "nomad_client"
version = "1.1.4"
authors = ["Rivet Gaming, LLC <developer@rivet.gg>"]
edition = "2018"
license = "Apache-2.0"

[dependencies]
serde = "^1.0"
serde_derive = "^1.0"
serde_json = "^1.0"
url = "^2.2"
[dependencies.reqwest]
version = "^0.11"
default-features = false
features = ["json", "multipart"]

[dev-dependencies]
