[package]
name = "nomad-util"
version = "0.1.0"
authors = ["Rivet Gaming, LLC <developer@rivet.gg>"]
edition = "2018"
license = "Apache-2.0"

[dependencies]
base64 = "0.13"
bytes = "1.0"
futures-util = "0.3"
nomad-client = "0.0.9"
reqwest = { version = "0.11", features = ["stream"] }
rivet-pools = { path = "../pools" }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["raw_value"] }
thiserror = "1.0"
tokio = { version = "1.29", features = ["full"] }
tracing = "0.1"

