[package]
name = "rivet-pools"
version = "0.1.0"
edition = "2021"
authors = ["Rivet Gaming, LLC <developer@rivet.gg>"]
license = "Apache-2.0"

[dependencies]
async-nats = "0.33"
clickhouse = { version = "0.11.2" }
funty = "=1.1.0"  # Fixes issue with sqlx dependency, see https://github.com/bitvecto-rs/bitvec/issues/105#issuecomment-778570981
global-error = { path = "../global-error" }
hyper = { version = "0.14" }
hyper-tls = { version = "0.5.0" }
lazy_static = "1.4"
rand = "0.8"
rivet-metrics = { path = "../metrics" }
thiserror = "1.0"
tokio = { version = "1.40", features = ["tracing"] }
tokio-util = "0.7"
tracing = "0.1"
governor = "0.6"
url = "2.5.0"

[dependencies.sqlx]
git = "https://github.com/rivet-gg/sqlx"
rev = "08d6e61aa0572e7ec557abbedb72cebb96e1ac5b"
default-features = false
features = [
	"runtime-tokio",
	"runtime-tokio-native-tls",
	"postgres",
	"macros",
	"uuid",
	"ipnetwork",
	"json",
	"bit-vec",
]

[dependencies.redis]
# TODO: https://github.com/rivet-gg/rivet/issues/508
git = "https://github.com/rivet-gg/redis-rs.git"
rev = "ac3e27fa1d133847db54354493f4d25957ad3466"
default-features = false
features = [
	"keep-alive",
	"aio",
	"tokio-comp",
	"tokio-native-tls-comp",
	"connection-manager",
	"script",
	"streams",
]
