[package]
name = "redis-util"
version = "0.1.0"
edition = "2021"
authors = ["Rivet Gaming, LLC <developer@rivet.gg>"]
license = "Apache-2.0"

[dependencies]
lazy_static = "1.4"
regex = "1.5"

[dependencies.redis]
# TODO: https://github.com/rivet-gg/rivet/issues/508
git = "https://github.com/redis-rs/redis-rs.git"
rev = "26c977c"
default-features = false

