[package]
name = "s3-util"
version = "0.1.0"
authors = ["Rivet Gaming, LLC <developer@rivet.gg>"]
edition = "2021"
license = "Apache-2.0"

[dependencies]
aws-sdk-s3 = { version = "0.22", features = ["rt-tokio"] }
aws-smithy-async = { version = "0.52", features = ["rt-tokio"] }
aws-smithy-http = { version = "0.52", features = ["rt-tokio"] }
aws-smithy-types = { version = "0.52" }
http = "0.2"
thiserror = "1.0"
tracing = "0.1"
tokio = { version = "1.40" }
rivet-util = { version = "0.1.0", path = "../util/core" }
