[package]
name = "bolt"
version = "0.1.0"
edition = "2021"
authors = ["Rivet Gaming, LLC <developer@rivet.gg>"]
license = "Apache-2.0"

[dependencies]
anyhow = "1.0"
atty = "0.2.14"
bolt-core = { path = "../core" }
chrono = "0.4"
clap = { version = "4.3", features = ["derive", "env"] }
duct = "0.13"
rivet-term = { git = "https://github.com/rivet-gg/rivet-term.git", rev = "7cf60c225f00eb40d212cec673f09ac47d13d295" }
serde_json = "1.0"
tempfile = "3.2"
tokio = { version = "1.29", features = ["full"] }
toml_edit = "0.19.0"
