[package]
name = "bolt"
version = "0.1.0"
edition = "2021"
authors = ["Rivet Gaming, LLC <developer@rivet.gg>"]
license = "Apache-2.0"

[dependencies]
anyhow = "1.0"
atty = "0.2.14"
bolt-core = { path = "../core" }
chrono = "0.4"
clap = { version = "4.3", features = ["derive", "env"] }
duct = "0.13"
json-patch = "1.2"
rivet-api = { path = "../../../sdks/full/rust" }
rivet-term = { git = "https://github.com/rivet-gg/rivet-term.git", rev = "d539a07d2920d47b88410f20e6d106b497cff1f5" }
serde_json = "1.0"
serde_plain = "1.0.2"
tabled = "0.16.0"
tempfile = "3.2"
tokio = { version = "1.29", features = ["full"] }
toml = "0.7"
toml_edit = "0.19.0"
uuid = "1.8.0"
