[package]
name = "bolt-config"
version = "0.1.0"
authors = ["Rivet Gaming, LLC <developer@rivet.gg>"]
edition = "2018"
license = "Apache-2.0"

[dependencies]
heck = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
strum = "0.25"
strum_macros = "0.25"
toml = "0.7"
uuid = { version = "1.3", features = ["serde", "v4"] }
