[package]
name = "chirp-perf"
version = "0.1.0"
edition = "2021"
authors = ["Rivet Gaming, LLC <developer@rivet.gg>"]
license = "Apache-2.0"

[dependencies]
lazy_static = "1.4"
prost = "0.10"
types-proto = { path = "../../types-proto/core" }
rivet-metrics = { path = "../../metrics" }
rivet-pools = { path = "../../pools" }
thiserror = "1.0"
tokio = { version = "1.29", features = ["full", "tracing"] }
tracing = "0.1"

[dependencies.uuid]
version = "1.1"
features = ["v4", "serde"]

[dependencies.redis]
# TODO: https://github.com/rivet-gg/rivet/issues/508
git = "https://github.com/rivet-gg/redis-rs.git"
rev = "ac3e27fa1d133847db54354493f4d25957ad3466"
default-features = false
features = [
	"keep-alive",
	"aio",
	"tokio-comp",
	"tokio-native-tls-comp",
]
