[package]
name = "container-runner"
version = "0.1.0"
edition = "2021"
authors = ["Rivet Gaming, LLC <developer@rivet.gg>"]
license = "Apache-2.0"

[dependencies]
anyhow = "1.0.79"
portpicker = "0.1.1"
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.111"
signal-hook = "0.3.17"

[dev-dependencies]
tempfile = "3.9.0"
uuid = { version = "1.6.1", features = ["v4"] }

