[package]
name = "pegboard-manager"
version = "0.1.0"
edition = "2021"
authors = ["Rivet Gaming, LLC <developer@rivet.gg>"]
license = "Apache-2.0"

[dependencies]
anyhow = "1.0.79"
futures-util = { version = "0.3" }
nix = { version = "0.27", default-features = false, features = ["user", "signal"] }
reqwest = { version = "0.11", features = ["stream"] }
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.111"
tokio = { version = "1.27", default-features = false, features = ["fs", "process", "macros", "rt", "rt-multi-thread"] }
tokio-util = { version = "0.7", default-features = false, features = ["io-util"] }
tracing = "0.1"
tracing-logfmt = "0.3"
tracing-subscriber = { version = "0.3", default-features = false, features = [
    "ansi",
    "fmt",
    "json",
] }
tokio-tungstenite = "0.23.1"
url = "2.5.0"
uuid = { version = "1.6.1", features = ["v4"] }

pegboard = { path = "../../../svc/pkg/pegboard" }
