[package]
name = "v8-isolate-runner"
version = "0.1.0"
edition = "2021"
authors = ["Rivet Gaming, LLC <developer@rivet.gg>"]
license = "Apache-2.0"

[dependencies]
anyhow = "1.0.79"
deno_ast = "0.42.1"
deno_core = "0.312.0"
nix = { version = "0.27", default-features = false, features = ["user", "signal"] }
netif = "0.1.6"
notify = { version = "6.1.1", default-features = false, features = [ "serde" ] }
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.111"
signal-hook = "0.3.17"
tokio = { version = "1.36.0", features = [ "full" ] }
twox-hash = "1.6.3"
uuid = { version = "1.6.1", features = ["v4"] }

[dependencies.deno_runtime]
# path = "../../../../../deno/runtime"
git = "https://github.com/rivet-gg/deno"
rev = "51c89a17cb31bc37f8571a3906e2264d6a3e8949"
package = "deno_runtime"

[dev-dependencies]
portpicker = "0.1.1"
tempfile = "3.9.0"
uuid = { version = "1.6.1", features = ["v4"] }

