[package]
name = "types"
version = "0.1.0"
edition = "2018"
authors = ["Rivet Gaming, LLC <developer@rivet.gg>"]
license = "Apache-2.0"

[features]
protobuf-src = ["types-build/protobuf-src"]

[dependencies]
chirp-types = { path = "../../chirp/types" }
prost = "0.10"
prost-types = "0.10"
uuid = { version = "1", features = ["v4"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
http = "0.2"

[build-dependencies]
types-build = { path = "../build" }
