[package]
name = "rivet-util"
version = "0.1.0"
authors = ["Rivet Gaming, LLC <developer@rivet.gg>"]
edition = "2021"
license = "Apache-2.0"

[features]
default = ["macros"]
macros = []

[dependencies]
async-trait = "0.1"
bcrypt = "0.13.0"
chrono = "0.4"
formatted-error = { path = "../../formatted-error", optional = true }
futures-util = "0.3"
global-error = { path = "../../global-error" }
indexmap = { version = "2.0", features = ["serde"] }
ipnet = { version = "2.7", features = ["serde"] }
lazy_static = "1.4"
rand = "0.8"
regex = "1.4"
reqwest = "0.11"
rivet-util-env = { path = "../env" }
rivet-util-macros = { path = "../macros" }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
thiserror = "1.0"
tokio = { version = "1.40", default-features = false, features = [
    "fs",
    "macros",
    "parking_lot",
    "sync",
    "test-util",
    "time",
] }
types-proto = { path = "../../types-proto/core" }
uuid = { version = "1", features = ["v4", "serde"] }

[dependencies.sqlx]
git = "https://github.com/rivet-gg/sqlx"
rev = "08d6e61aa0572e7ec557abbedb72cebb96e1ac5b"
default-features = false
features = [
	"runtime-tokio",
	"postgres",
	"uuid",
	"json",
	"ipnetwork"
]
