[package]
name = "rivet-util-env"
version = "0.1.0"
edition = "2021"
authors = ["Rivet Gaming, LLC <developer@rivet.gg>"]
license = "Apache-2.0"

[dependencies]
lazy_static = "1.4"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.109"
thiserror = "1.0"
uuid = { version = "1", features = ["v4"] }
types-proto = { path = "../../types-proto/core" }
