[package]
name = "rivet-util-macros"
version = "0.1.0"
authors = ["Rivet Gaming, LLC <developer@rivet.gg>"]
edition = "2018"
license = "Apache-2.0"

[lib]
proc-macro = true

[dependencies]
quote = "1.0"
proc-macro2 = "1.0"

[dependencies.syn]
version = "1.0"
features = [
	"full",
	"extra-traits",
]
